python/tests/gold/tlscontextprotocolmaxversion/snapshots/snapshot.yaml
{
    "Consul": {},
    "Kubernetes": {
        "AuthService": null,
        "ConsulResolver": null,
        "Host": null,
        "KubernetesEndpointResolver": null,
        "KubernetesServiceResolver": null,
        "LogService": null,
        "Mapping": null,
        "Module": null,
        "RateLimitService": null,
        "TCPMapping": null,
        "TLSContext": null,
        "TracingService": null,
        "ingresses": null,
        "secret": [
            {
                "apiVersion": "v1",
                "data": {
                    "tls.crt": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURnRENDQW1pZ0F3SUJBZ0lKQUpycUl0ekY2MTBpTUEwR0NTcUdTSWIzRFFFQkN3VUFNRlV4Q3pBSkJnTlYKQkFZVEFsVlRNUXN3Q1FZRFZRUUlEQUpOUVRFUE1BMEdBMVVFQnd3R1FtOXpkRzl1TVFzd0NRWURWUVFLREFKRQpWekViTUJrR0ExVUVBd3dTZEd4ekxXTnZiblJsZUhRdGFHOXpkQzB4TUI0WERURTRNVEV3TVRFek5UTXhPRm9YCkRUSTRNVEF5T1RFek5UTXhPRm93VlRFTE1Ba0dBMVVFQmhNQ1ZWTXhDekFKQmdOVkJBZ01BazFCTVE4d0RRWUQKVlFRSERBWkNiM04wYjI0eEN6QUpCZ05WQkFvTUFrUlhNUnN3R1FZRFZRUUREQkowYkhNdFkyOXVkR1Y0ZEMx [...]
                    "tls.key": "LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2UUlCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktjd2dnU2pBZ0VBQW9JQkFRQzlPZ0M4d3h5SXJQem8KR1hzTHBQS3Q3MkRFeDJ3andXOG5YVzJ3V2J5YTNjOTZuMm5TQ0tQQm44NWhicXNoemo1aWhTVEFNRElvZzlGdgpHNlJLV1VQWFQ0S0lrVHYzQ0RIcVhzQXBKbEo0bFN5blF5bzJadjBvK0FmOENMbmdZWkIrcmZ6dFp3eWVEaFZwCndZekJWMjM1eno2KzJxYlZtQ1psdkJ1WGJVcVRsRVlZdnVHbE1HejdwUGZPV0tVcGVZb2RiRzJmYitoRkZwZW8KQ3hrVVhyUXNPb1I1SmRIRzVqV3JadUJPNDU1U3NyekJMOFJsZTVVSG8wNVdjSzdiQmJpUXoxMDZwSENKWVor [...]
                },
                "kind": "Secret",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"data\":{\"tls.crt\":\"LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURnRENDQW1pZ0F3SUJBZ0lKQUpycUl0ekY2MTBpTUEwR0NTcUdTSWIzRFFFQkN3VUFNRlV4Q3pBSkJnTlYKQkFZVEFsVlRNUXN3Q1FZRFZRUUlEQUpOUVRFUE1BMEdBMVVFQnd3R1FtOXpkRzl1TVFzd0NRWURWUVFLREFKRQpWekViTUJrR0ExVUVBd3dTZEd4ekxXTnZiblJsZUhRdGFHOXpkQzB4TUI0WERURTRNVEV3TVRFek5UTXhPRm9YCkRUSTRNVEF5T1RFek5UTXhPRm93VlRFTE1Ba0dBMVVFQmhNQ1ZWTXhDekFKQmdOVkJBZ01BazFCTVE4 [...]
                    },
                    "creationTimestamp": "2019-12-18T23:57:36Z",
                    "labels": {
                        "kat-ambassador-id": "tlscontextprotocolmaxversion",
                        "scope": "AmbassadorTest"
                    },
                    "name": "secret.max-version",
                    "namespace": "default",
                    "resourceVersion": "20527",
                    "selfLink": "/api/v1/namespaces/default/secrets/secret.max-version",
                    "uid": "2a7fa5e5-21f2-11ea-82d6-128842395df1"
                },
                "type": "kubernetes.io/tls"
            }
        ],
        "service": [
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"tlscontextprotocolmaxversion\",\"scope\":\"AmbassadorTest\"},\"name\":\"tlscontextprotocolmaxversion-http\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":80,\"protocol\":\"TCP\",\"targetPort\":8088},{\"name\":\"https\",\"port\":443,\"protocol\":\"TCP\",\"targetPort\":8451}],\"sel [...]
                    },
                    "creationTimestamp": "2019-12-18T23:57:36Z",
                    "labels": {
                        "kat-ambassador-id": "tlscontextprotocolmaxversion",
                        "scope": "AmbassadorTest"
                    },
                    "name": "tlscontextprotocolmaxversion-http",
                    "namespace": "default",
                    "resourceVersion": "20529",
                    "selfLink": "/api/v1/namespaces/default/services/tlscontextprotocolmaxversion-http",
                    "uid": "2a8c69dc-21f2-11ea-82d6-128842395df1"
                },
                "spec": {
                    "clusterIP": "10.105.206.28",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8088
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8451
                        }
                    ],
                    "selector": {
                        "backend": "superpod-default"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: ambassador/v0\nkind: Module\nname: ambassador\nconfig:\n  defaults:\n    tls_secret_namespacing: False\nambassador_id: tlscontextprotocolmaxversion\n---\napiVersion: ambassador/v0\nkind: Mapping\nname: TLSContextProtocolMaxVersion-same-prefix-1\nprefix: /tls-context-same/\nservice: http://tlscontextprotocolmaxversion-http\nhost: tls-context-host-1\nambassador_id: tlscontextprotocolmaxversion\n---\napiVersion: ambassador/v1\nkin [...]
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: ambassador/v0\\nkind: Module\\nname: ambassador\\nconfig:\\n  defaults:\\n    tls_secret_namespacing: False\\nambassador_id: tlscontextprotocolmaxversion\\n---\\napiVersion: ambassador/v0\\nkind: Mapping\\nname: TLSContextProtocolMaxVersion-same-prefix-1\\nprefix: /tls-context-same/\\nservice: http: [...]
                    },
                    "creationTimestamp": "2019-12-18T23:57:36Z",
                    "labels": {
                        "app.kubernetes.io/component": "ambassador-service",
                        "kat-ambassador-id": "tlscontextprotocolmaxversion",
                        "scope": "AmbassadorTest"
                    },
                    "name": "tlscontextprotocolmaxversion",
                    "namespace": "default",
                    "resourceVersion": "20513",
                    "selfLink": "/api/v1/namespaces/default/services/tlscontextprotocolmaxversion",
                    "uid": "2a4f28b4-21f2-11ea-82d6-128842395df1"
                },
                "spec": {
                    "clusterIP": "10.110.251.168",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "http",
                            "nodePort": 31666,
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "nodePort": 31394,
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "service": "tlscontextprotocolmaxversion"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"tlscontextprotocolmaxversion\",\"scope\":\"AmbassadorTest\",\"service\":\"tlscontextprotocolmaxversion-admin\"},\"name\":\"tlscontextprotocolmaxversion-admin\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"tlscontextprotocolmaxversion-admin\",\"port\":8877,\"targetPort\":8877}],\"selector\":{\"s [...]
                    },
                    "creationTimestamp": "2019-12-18T23:57:36Z",
                    "labels": {
                        "kat-ambassador-id": "tlscontextprotocolmaxversion",
                        "scope": "AmbassadorTest",
                        "service": "tlscontextprotocolmaxversion-admin"
                    },
                    "name": "tlscontextprotocolmaxversion-admin",
                    "namespace": "default",
                    "resourceVersion": "20520",
                    "selfLink": "/api/v1/namespaces/default/services/tlscontextprotocolmaxversion-admin",
                    "uid": "2a66cb2e-21f2-11ea-82d6-128842395df1"
                },
                "spec": {
                    "clusterIP": "10.103.22.182",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "tlscontextprotocolmaxversion-admin",
                            "nodePort": 32274,
                            "port": 8877,
                            "protocol": "TCP",
                            "targetPort": 8877
                        }
                    ],
                    "selector": {
                        "service": "tlscontextprotocolmaxversion"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            }
        ]
    }
}
